--- a/assets/css/estil.css
+++ b/assets/css/estil.css
@@ -63,7 +63,8 @@ body {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, red, blue, deeppink, blue, red, blue, deeppink, blue);
+  /* background: linear-gradient(45deg, red, blue, deeppink, blue, red, blue, deeppink, blue); */
+  background: linear-gradient(45deg, red, white, deeppink, white, red, white, deeppink, white);
   background-size: 800%;
   border-radius: 10px;
   filter: blur(8px);
